# LibraryTemplate

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: INSERT_LIBRARY_NAME.cpp
